--- a/index2.html
+++ b/index2.html
@@ -7,5 +7,8 @@
 <body>
 	<h1>hello git Винда 1</h1>
 	<h2>hello git 2</h2>
+	
+	<h1>hello git Винда 2</h1>
+	<h1>hello git Винда 3</h1>
 </body>
 </html>
